[package]
name = "cathexis"
version = "0.1.0"
edition = "2021"
description = "A Trust-Handle Layer for EQBSL Networks implementation in Rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
ndarray = { version = "0.15", features = ["serde"] } # For potential tensor operations if needed, though simple vectors might suffice for now.
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
approx = "0.5"
